[gd_scene load_steps=4 format=2]

[ext_resource path="res://models/Genesis2Female/Genesis2Female.tscn" type="PackedScene" id=1]
[ext_resource path="res://tests/Test.gd" type="Script" id=2]


[sub_resource type="PlaneMesh" id=1]

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.561393, -0.411871, 0.717775, 0, 0.86735, 0.4977, -0.82755, -0.279405, 0.486924, 2.8711, 1.9908, 1.9477 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.667156, -0.579302, 0.468308, 0, 0.628671, 0.777672, -0.744918, 0.518828, -0.419421, 0.637763, 1.05907, -0.571186 )
light_color = Color( 0.768627, 0.752941, 0.521569, 1 )
shadow_enabled = true

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Player2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.867916, 2.38419e-07, 0.967365 )

[node name="Player3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.33224, 2.38419e-07, 1.26672 )

[node name="Player4" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22865, 7.15256e-07, -1.86144 )

[node name="Player5" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26608, 2.38419e-07, -1.72439 )
